# dropset-beta

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.claude/skills/audit/: SKILL.md
.claude/skills/docs-review/: SKILL.md
.claude/skills/init-pr/: SKILL.md
.claude/skills/manage-pentagon-agent/: SKILL.md
.claude/skills/manage-pentagon-canvas/: SKILL.md
.claude/skills/manage-pentagon-role/: SKILL.md
.claude/skills/manage-pentagon-team/: SKILL.md
.claude/skills/pr-title-description/: SKILL.md
.claude/skills/send-pentagon-message/: SKILL.md
.github/actions/install-sbpf/: action.yml
.github/workflows/: bindings.yml  build-docs.yml  check-docs-build.yml  deploy-docs.yml  lint.yml  quick-lint.yml  semantic-pr.yml  test.yml
cfg/: dictionary.txt  lychee.toml  markdownlint.yml  pre-commit-lint.yml
cfg/pre-commit/: lint.yml  quick-lint.yml
docs/: .gitignore  .prettierignore  CNAME  package-lock.json  package.json
docs/.vitepress/: buildAlgorithmIndex.js  config.js
docs/.vitepress/components/: Algorithm.vue  AlgorithmIndex.vue  AlgorithmTreeNode.vue  Include.vue  Pseudocode.vue  paths.js
docs/.vitepress/theme/: index.js  scrollPreserve.js
docs/algorithms/: ENTRYPOINT.tex  Entrypoint.tex  INIT-MARKET-PDA.tex  INIT-VAULT.tex  REGISTER-MARKET.tex  RegisterMarket.tex  registry.json  syscalls.json
docs/algorithms/market/: CREATE-VAULT-ACCOUNT.tex  GET-VAULT-SIZE.tex  INIT-BASE-VAULT.tex  INIT-MARKET-PDA.tex  INIT-QUOTE-VAULT.tex  INIT-VAULT-TOKEN-ACCOUNT.tex  INIT-VAULT.tex  MARKET-PDA-PRELUDE.tex  REGISTER-MARKET.tex
docs/public/algorithms/: RegisterMarket.tex
docs/src/: Index.md  index.md
docs/src/algorithms/: Entrypoint.tex  Quicksort.tex  index.json
docs/src/development/: build-scaffolding.md  ci.md  docs-engine.md  index.md  tests.md
docs/src/indices/: algorithms.md
docs/src/program/: algorithm-index.md  entrypoint.md  inputs.md  layout.md  markets.md  orders.md  partition.md  pubkeys.md  quicksort.md  register-market.md  seats.md  sectors.md
docs/src/tex/: algorithmIndex.json  partition.tex
interface/: Cargo.toml
interface/src/: cpi_bindings.rs  entrypoint.rs  error.rs  groups.rs  lib.rs  market.rs  memory.rs  order.rs  pubkey.rs  seat.rs  token.rs
interface/src/common/: account.rs  cpi_bindings.rs  memory.rs  mod.rs  token.rs
interface/src/market/: mod.rs  register.rs
interface/src/order/: mod.rs
interface/src/seat/: mod.rs
interface/src/stack/: mod.rs
interface/src/svm/: account.rs  memory.rs  mod.rs  pubkey.rs  token.rs
macros/: Cargo.toml
macros/src/: attrs.rs  codegen.rs  constant_group.rs  cpi_accounts.rs  enum_to_asm.rs  frame.rs  lib.rs  sbpf_config.rs  shared_state.rs  signer_seeds.rs  size_of_group.rs  svm_data.rs
macros/src/common/: codegen.rs  mod.rs  shared_state.rs
macros/src/constant_group/: expand.rs  (+5 more)
program/: Anchor.toml  Cargo.toml  build.rs
program/src/: lib.rs
program/src/dropset/: discriminant.s  dropset.s  entrypoint.s  error.s  instruction.s  memory.s
program/src/dropset/common/: account.s  error.s  memory.s  pubkey.s  token.s
program/src/dropset/market/: init_base_vault.s  init_market_pda.s  init_quote_vault.s  init_vault.s  init_vault_token_account.s  market.s  market_pda_prelude.s  register.s
program/src/dropset/market/init_market_pda/: create_market_account.s
program/src/dropset/market/init_vault/: create_vault_account.s  get_vault_size.s  init_vault.s  init_vault_token_account.s
program/src/dropset/svm/: account.s
program/tests/: dropset.rs
specs/: workflow.md
src/: lib.rs
src/dropset/: dropset.s  entrypoint.s  error.s
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/cases/: entrypoint.rs
tests/tests/: entrypoint.rs  run.rs
tests/tests/cases/: entrypoint.rs  mod.rs  register_market.rs
(+25 files in other folders)
