[build-dependencies]
dropset-build = {path = "build"}
dropset-interface = {path = "interface"}

[package]
name = "dropset"
edition.workspace = true
version.workspace = true

[workspace]
members = ["build", "macros", "interface", "tests"]
resolver = "3"

[workspace.dependencies]
bindgen = "0.72.1"
heck = "0.5"
mollusk-svm = "0.12.0"
mollusk-svm-programs-token = "0.12.0"
pinocchio = "0.10.2"
pinocchio-token = "0.5.0"
# "0.2.0" does not export GetAccountDataSize.
pinocchio-token-2022 = {git = "https://github.com/anza-xyz/pinocchio", branch = "main"}
proc-macro2 = "1.0.106"
quote = "1.0.45"
solana-account = "3.2"
solana-program-pack = "3.1"
solana-sbpf = "0.16.0"
solana-sdk = "4.0.1"
spl-token-interface = "2.0.0"
spl-token-2022-interface = "2.1.0"
syn = {version = "2.0.117", features = ["full"]}
ureq = "3.3.0"

[workspace.package]
edition = "2024"
version = "0.1.0"
