[package]
name = "dropset"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[features]
no-entrypoint = []
idl-build = []
profile = ["anchor-v2-testing/profile"]

[build-dependencies]
anchor-asm-v2 = { git = "https://github.com/solana-foundation/anchor.git", branch = "anchor-next" }

[dev-dependencies]
anchor-v2-testing = { git = "https://github.com/solana-foundation/anchor.git", branch = "anchor-next" }
litesvm = "0.11"
solana-account = "3.0"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-pubkey = "3.0"
solana-signer = "3.0"
spl-token = "8.0"

[lints.rust.unexpected_cfgs]
level = "allow"

[profile.release]
overflow-checks = true
