[package]
name = "dropset-tests"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
dropset-interface = {path = "../interface"}
mollusk-svm = {workspace = true}
solana-account = {workspace = true}
solana-instruction = {workspace = true}
solana-keypair = {workspace = true}
solana-program-error = {workspace = true}
solana-pubkey = {workspace = true}
solana-signer = {workspace = true}
