[dependencies]
dropset-interface = {path = "../interface"}
mollusk-svm = {workspace = true}
mollusk-svm-programs-token = {workspace = true}
solana-account = {workspace = true}
solana-program-pack = {workspace = true}
solana-sbpf = {workspace = true}
solana-sdk = {workspace = true}
spl-token-2022-interface = {workspace = true}
spl-token-interface = {workspace = true}
heck.workspace = true

[package]
name = "dropset-tests"
publish = false
edition.workspace = true
version.workspace = true
